--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
-  "name": "fileupload",
+  "name": "azure-storage-function",
   "version": "1.0.0",
-  "description": "Azure express file upload function",
-  "engines": {
-    "node": ">=10.14.1",
-    "npm": ">=6.13.4"
-  },
+  "description": "Storage interface Function for Azure Storage containers",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "@azure/storage-blob": "^12.1.2",
-    "body-parser": "^1.18.3",
-    "cookie-parser": "~1.4.3",
-    "debug": "^4.1.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "hbs": "^4.1.1",
-    "into-stream": "^5.1.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.1",
-    "serve-favicon": "~2.5.0",
-    "typescript": "^4.3.2"
+    "start":"node ./dist/server.js",
+    "start-dev": "NODE_ENV=dev node ./dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MXDS",
   "license": "ISC",
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
-    "@types/morgan": "^1.9.2",
+    "@types/express-session": "^1.17.3",
     "@types/multer": "^1.4.5",
-    "@types/serve-favicon": "^2.5.2"
+    "@types/node": "^15.12.1"
+  },
+  "dependencies": {
+    "@azure/storage-blob": "^12.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "into-stream": "^7.0.0",
+    "mongoose": "^5.12.13",
+    "multer": "^1.4.2"
   }
 }
